--- a/app/products/[id]/prod.module.css
+++ b/app/products/[id]/prod.module.css
@@ -1,178 +1,168 @@
-.main {
-    margin-top: 80px;
-    width: 100%;
-}
-
-.container {
-    width: 100%;
-    margin-inline: auto;
-    padding-inline-start: 1em;
-    padding-inline-end: 1em;
-    max-width: 1280px;
-    padding-top: 20px;
-    padding-bottom: 140px;
-}
-
 .contpag {
-    display: flex;
-    flex-direction: column;
-    gap: 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+  padding-top: 20px;
+  padding-bottom: 140px;
+
 }
 
 .containerimg {
-    display: flex;
-    align-items: center; 
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
 }
 
 .conth2 {
-    font-family: Poppins, sans-serif;
-    font-size: 1.875rem;
-    line-height: 1.33;
-    font-weight: 500;
+  font-family: Poppins, sans-serif;
+  font-size: 1.875rem;
+  line-height: 1.33;
+  font-weight: 500;
 }
 
 .contimg {
-    object-fit: cover;
-    width: 350px;
-    height: 350px;
+  object-fit: cover;
+  width: 350px;
+  height: 350px;
 }
 
 .contimgsmall {
-    display: flex;
-    align-items: center; 
-    flex-direction: row;
-    gap: 0.5rem;
-    overflow-x: auto;
-    align-self: flex-start; 
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 0.5rem;
+  overflow-x: auto;
+  align-self: flex-start;
 }
 
 .contimgsmall img {
-    width: 80px;
+  width: 80px;
 }
 
 .contfree {
-    text-align: center;
-    font-size: 1.25rem;
-    font-weight: 500;
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
+
+.contfree span {
+  display: block;
+  margin-top: 20px;
 }
 
 .containertxt {
-    display: flex;
-    align-items: flex-start; 
-    flex-direction: column;
-    gap: 22px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 22px;
 }
 
 .containertxth2 {
-    font-family: Poppins, sans-serif;
-    font-size: 1.875rem;
-    line-height: 1.33;
-    font-weight: 500;
+  font-family: Poppins, sans-serif;
+  font-size: 1.875rem;
+  line-height: 1.33;
+  font-weight: 500;
 }
 
 .containercost {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    flex-direction: row;
-    gap: 0.5rem;
-    width: 100%;
-}
-.containercost p{
-    color: #56B280;
-    font-size: 1.5rem;
-    font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 0.5rem;
+  width: 100%;
 }
 
-.containercost button{
-    display: inline-flex;
-    appearance: none;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-    position: relative;
-    vertical-align: middle;
-    outline-offset: 2px;
-    line-height: 1.2;
-    font-weight: 500;
-    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform ;
-    transition-duration: 200ms;
-    font-family: Roboto, sans-serif;
-    height: 2rem;
-    min-width: 2rem;
-    font-size: 16px;
-    padding-inline-start: 0.75rem;
-    padding-inline-end: 0.75rem;
-    color: rgb(255, 255, 255);
-    background-color: #56B280;
-    white-space: nowrap;
-    outline: transparent solid 2px;
-    border-radius: 0.375rem;
-    padding: 20px;
+.containercost p {
+  color: #56b280;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
-.containerbox{
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 100%;
-    padding: 22px;
-    border-width: 1px;
-    border-color: gray;
-    border-radius: 0.375rem;
+.containercost button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+  position: relative;
+  vertical-align: middle;
+  line-height: 1.2;
+  font-weight: 500;
+  font-family: Roboto, sans-serif;
+  height: 2rem;
+  min-width: 2rem;
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  background-color: #56b280;
+  white-space: nowrap;
+  border: 2px solid transparent;
+  border-radius: 0.375rem;
 }
 
-.contp{
-    color: rgb(132, 154, 142);
-    display: inline;
+.containerbox {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
+  padding: 22px;
+  border: 1px solid gray;
+  border-radius: 0.375rem;
 }
 
-.contp p{
-    color: rgb(29, 37, 44);
-    display: inline;
+.contp {
+  color: #849a8e;
 }
 
-.contmobilp{
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: 600;
+.contp strong {
+  color: #1d252c;
 }
 
+.contmobilp {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.contmobilp span {
+  display: block;
+  margin-top: 20px;
+}
+
+/* Media Queries */
 @media screen and (min-width: 62em) {
-    .contpag {
-        flex-direction: row;
-    }
-    .containerimg {
-        width: 500px;
-    }
-    .conth2 {
-        display: none;
-    }
-    .contmobilp{
-        display: none;
-    }
+  .contpag {
+    flex-direction: row;
+  }
+  .containerimg {
+    width: 500px;
+  }
+  .conth2 {
+    display: none;
+  }
+  .contmobilp {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 48em) {
-    .conth2 {
-        font-size: 2.25rem;
-        line-height: 1.2;
-    }
-    .containertxth2 {
-        font-size: 2.25rem;
-        line-height: 1.2;
-    }
+  .conth2 {
+    font-size: 2.25rem;
+    line-height: 1.2;
+  }
+  .containertxth2 {
+    font-size: 2.25rem;
+    line-height: 1.2;
+  }
 }
 
 @media screen and (max-width: 61.98em) {
-    .contfree {
-        display: none;
-    }
-    .containertxth2{
-        display: none;
-    }
+  .contfree,
+  .containertxth2 {
+    display: none;
+  }
 }
+
