--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -1,11 +1,3 @@
-.container{
-    width: 100%;
-    margin-inline: auto;
-    padding-inline-start: 1rem;
-    padding-inline-end: 1rem;
-    max-width: 1280px;
-}
-
 .contprod{
     display: flex;
     align-items: center; 
@@ -33,6 +25,7 @@
     gap: 20px;
     grid-template-columns: repeat(1, minmax(0px, 1fr));
     margin-top: 60px;
+    width: 100%;
 }
 
 .products a{
@@ -46,8 +39,6 @@
     flex-direction: column;
     position: relative;
     min-width: 256px;
-    overflow-wrap: break-word;
-    background-color:white;
     box-shadow:  0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
     border-radius:  0.375rem;
     color: #1A202C;
@@ -69,7 +60,7 @@
 }
 
 .cardimg{
-    object-fit: cover;
+    object-fit: contain;
     width: 100%;
     height: 100px;
 }
@@ -81,6 +72,7 @@
 }
 
 @media screen and (min-width: 48em) {
+
     .conttxt {
         font-size: 2.25rem;
         line-height: 1.2;
@@ -88,6 +80,13 @@
 
     .cardimg{
         height: 150px;
+    }
+    .products {
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(2, minmax(0px, 1fr));
+        width: 100%;
+        margin-top: 60px;
     }
 }
 
